# improved-potato

./: .gitignore  README.md  mushroom.ipynb  pyproject.toml  requirements.txt
improved-potato/: README.md  main.py
notebooks/: mushroom.ipynb
