[tool.poetry]
name = "improved-potato"
version = "0.1.0"
description = ""
authors = ["Shiqarno <shiqarno@proton.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
uvicorn = "^0.23.2"
pandas = "^2.1.1"
fastapi = "^0.103.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
